<resources>
    <string name="app_name">Qui-Bot H20</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inici</string>
    <string name="menu_experiments">Experiments</string>
    <string name="menu_interact">Interactua amb el robot</string>
    <string name="menu_custom_program">Programa el robot</string>
    <string name="menu_tic_tac_toe">Tres en ratlla</string>
    <string name="menu_connect4">Connecta 4</string>
    <string name="menu_users_list">Llista d\'usuaris</string>
    <string name="txtName">Nom</string>
    <string name="txtSurname">Cognoms</string>
    <string name="txtRepeatPassword">Repeteix la contrassenya</string>
    <string name="txtLogin">Entrar</string>
    <string name="txtCreateNewAccount">Crear un nou compte?</string>
    <string name="txtCreateAccount">Crear compte</string>
    <string name="txtAlreadyHaveAnAccount">Ja tens un compte?</string>
    <string name="txtTitleLoginAdmin">Entrar com a administrador</string>
    <string name="txtEmail">Correu electrònic</string>
    <string name="txtPassword">Contrassenya</string>
    <string name="txtGoBackLogin">Tornar a l\'inici de sessió</string>
    <string name="txtEnterCorrectEmail">Entra un correu vàlid.</string>
    <string name="txtPasswordLength">La contrassenya ha de contenir 6 caràcters o més.</string>
    <string name="txtWaitLogin">Espera mentre s\'inicia la sessió.</string>
    <string name="txtLoggingIn">Iniciant sessió</string>
    <string name="txtErrorLoggingIn">Error iniciant la sessió.</string>
    <string name="txtErrorAnotherAdminLogged">Error: un altre administrador ha iniciat la sessió.</string>
    <string name="registering">Registrant</string>
    <string name="newUserRegistered">Nou usuari registrat correctament</string>
    <string name="txtErrorRegistering">Error en realitzar el registre</string>
    <string name="btnTxtNovaPartida">Nova partida</string>
    <string name="btnTxtComJugar">Com es juga?</string>
    <string name="txtPlayer1">Jugador 1</string>
    <string name="txtPlayer2">Jugador 2</string>
    <string name="txtGameNotStarted">Inicia una partida</string>
    <string name="title_activity_admin">Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txtFailedStartingGame">Failed starting game</string>
    <string name="txtGameIsFull">El joc està ple</string>
    <string name="txtGameIsOver">S\'ha acabat la partida</string>
    <string name="txtYouWon">Has guanyat!</string>
    <string name="txtYouLost">Has perdut</string>
    <string name="txtWaitRobot">Espera que el robot faci la seva acció</string>
    <string name="txtPositionFull">La posició està ocupada</string>
    <string name="txtGameStarted">El joc ha començat</string>
    <string name="txtEndGame">Finalitza la partida</string>
    <string name="txtFirstStartNewGame">Per poder jugar, primer inicia un nou joc.</string>
    <string name="txtYourTurn">El teu torn</string>
    <string name="txtHisTurn">El torn del teu oponent</string>
    <string name="txtYouPlayWithX">Jugues amb: X</string>
    <string name="txtYouPlayWithO">Jugues amb: O</string>
    <string name="txtWaitingForPlayer">Esperant a l\'altre jugador</string>
    <string name="txtCantPlayWaitingOtherPlayer">No pots jugar. Cal un altre jugador.</string>
    <string name="txtNotYourTurn">No és el teu torn</string>
    <string name="txtPhisicalLayout">Disposició per jugar al joc.</string>
    <string name="txtClose">Tancar</string>
    <string name="txtPermissionsPlayTicTacToe">Demana permisos per jugar al Tres en ratlla</string>
    <string name="txtBoardIsFull">El tauler està ple. Es finalitza la partida.</string>
    <string name="txtRobotNotConnected">El robot no està connectat!</string>
    <string name="txtPermissionsPlayConnect4">Demana permisos per jugar al Connecta 4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtReset">Reset</string>
    <string name="txtReadColor">Llegeix el color</string>
    <string name="txtRaisePipette">Puja la xeringa</string>
    <string name="txtLowerPipette">Baixa la xeringa</string>
    <string name="txtNoPermissions">Demana permisos per poder controlar el robot.</string>
    <string name="txtCheckRobotConnection">Comprova que el robot estigui executant el seu programa ja que el servidor és incapaç de connectar-s\'hi.</string>
    <string name="txtAccept">D\'acord</string>
    <string name="txtGivePermissions">Dona l\'accés</string>
    <string name="txtQuitPermissions">Treu l\'accés</string>
    <string name="txtNoUsersLoggedIn">Cap usuari ha accedit a l\'aplicació.</string>
    <string name="txtRefreshedList">Llista d\'usuaris actualitzada</string>
    <string name="txtSelectActivityToAuthorize">Selecciona l\'activitat</string>
    <string name="txtSendProgram">Envia el programa</string>
    <string name="txtAddAction">Afegeix una acció</string>
    <string name="txtListOfActions">LLISTA D\'ACCIONS</string>
    <string name="txtForward">Endavant</string>
    <string name="txtBackwards">Enrere</string>
    <string name="txtRight">Dreta</string>
    <string name="txtLeft">Esquerra</string>
    <string name="txtActionPipette">Acciona la xeringa</string>
    <string name="txtSuck">Xucla el líquid</string>
    <string name="txtUnsuck">Expulsa el líquid</string>
    <string name="txtRepeatPreviousActions">Repeteix</string>
    <string name="txtTitleDialogCustomProgram">Selecciona l\'acció a realitzar</string>
    <string name="txtTitleEditDialogCustomProgram">Edita l\'acció a realitzar</string>
    <string name="txtButonSave">Desa</string>
    <string name="txtButonCancel">Cancel·la</string>
    <string name="txtNoActions">No hi ha cap acció programada.</string>
    <string name="txtProgramSentCorrectly">El programa s\'ha enviat correctament al robot.</string>
    <string name="txtProgramError">S\'ha produit un error a l\'enviar el programa al robot.</string>
    <string name="txtNoProgramToSend">No s\'ha definit cap programa per enviar al robot.</string>
    <string name="titleSeriesDisolucio">Sèries de dissolució</string>
    <string name="txtExplanationSeriesDisolució">Ompliu la primera cubeta amb el color que més us agradi al 80% de capacitat i les 5 següents amb aigua fins al 60% de capacitat.\n\nAra, el robot passarà la solució d\'una cubeta a una altra. Cada vegada que això passi la solució s\'anirà diluint cada vegada més fins a ser gairebé transparent. Podeu repetir aquest experiment vosaltres mateixos amb \"Interactua amb el robot\" o amb \"Programa el robot\" per intentar aconseguir el mateix resultat.</string>
    <string name="titleBarrejaColorsPrimaris">Barreja colors primaris</string>
    <string name="txtExplanationColorsPrimaris">Robot 1D:\nOmpliu la primera cubeta amb color blau i la tercera cubeta amb color groc al 80% de capacitat i la resta de cubetes deixeu-les buides.\n\nRobot2D:\nOmpliu la primera cubeta de color blau i la segona de color vermell tal i com es pot veure a \"Com preparar l\'experiment\".\n\nAra, el robot buscarà els dos colors primaris que hem posat per desprès barrejar-los i d\'aquesta manera obtenir un nou color secundari. Quin color serà? Podeu repetir aquest experiment vosaltres mateixos amb \"Interactua amb el robot\" o amb \"Programa el robot\" per intentar aconseguir el mateix resultat amb colors diferents!</string>
    <string name="titleCapesDeDensitat">Capes de densitat</string>
    <string name="txtExplanationCapesDeDensitat">Diluïu 18 grs. de sal en 50 ml. d\'aigua en un got i afegiu-hi el colorant de color blau. Després diluïu 6 grs. de sal en 50 ml. d\'aigua en un got i afegiu-hi el colorant de color vermell.\n\nOmpliu la primera cubeta amb la dissolució de color blau, la segona cubeta amb la dissolució de color vermell i la tercera cubeta amb aigua de color groc al 90% de capacitat, i la resta de cubetes deixeu-les buides.\n\nAra, el robot dipositarà totes les dissolucions en una mateixa cubeta amb molta cura. Com que les dissolucions tenen diferent densitat, amb l\'ajuda del colorant, veurem que les dissolucions no es barregen entre elles.</string>
    <string name="txtExecuteExperiment">Executa l\'experiment</string>
    <string name="txtHowToPrepareExperiment">Com preparar l\'experiment</string>
    <string name="txtTitleDialogSelectBoard">Selecciona el tipus de tauler</string>
    <string name="txtCannotChangePermission">Error canviant permisos per a l\'usuari. L\'activitat seleccionada té el màxim d\'usuaris permesos.</string>
    <string name="txtErrorChangingPermissions">Error canviant permisos per a l\'usuari.</string>
    <string name="txtRepeatNTimes">Repeteix:</string>
    <string name="txtGetLiquidQuantity">Xuclar:</string>
    <string name="txtTimes">vegades</string>
    <string name="txtMl">ml.</string>
    <string name="txtSuckXMl">Xuclar quantitat</string>
    <string name="txtUnsuckXMl">Expulsar quantitat</string>
    <string name="txtLast">Ultimes:</string>
    <string name="txtLast2">Últimes</string>
    <string name="txtActions">accions</string>
    <string name="txtAction">Acció:</string>
    <string name="txtNotEnughInstructions">No hi ha suficients instruccions a repetir.</string>
    <string name="txtValueMustBeGreaterThanZero">El valor d\'instruccions per repetir ha de ser més gran que zero.</string>
    <string name="txtValueCannotBeEmpty">El valor d\'instruccions a repetir no pot estar buit.</string>
    <string name="txtErrorLoop">L\'acció \"repeteix\" no pot estar en aquesta posició de la llista d\'accions.</string>
    <string name="txtRobot1D">Robot 1D</string>
    <string name="txtRobot2D">Robot 2D</string>
    <string name="txtDifferentRobot">Error. Actualment s\'està usant un altre robot. Tanca la sessió i selecciona el robot correctament.</string>
    <string name="txtInfraredControl">Comandament a distància</string>
    <string name="txtWifiConnectionAlertTitle">Connexió WiFi</string>
    <string name="txtWifiConnectionAlert">El WiFi està parat o desconnectat. Recorda que t\'has de connectar a la xarxa "QuiBotH2O" per poder controlar el robot.</string>
    <string name="txtSuckUnsuck">Xuclar/Expulsar el líquid</string>
    <string name="txtLogoutError">Error de connexió amb el servidor. Tancament de sessió només local.</string>
    <string name="txtColFull">La columna està plena!</string>
    <string name="txtVermelles">Jugues amb: Vermelles</string>
    <string name="txtGrogues">Jugues amb: Grogues</string>
    <string name="txtTitleHelpLogin">Inici de sessió</string>
    <string name="txtHelpLogin">Assegura\'t que el dispositiu mòbil té la connectivitat WiFi activada i s\'ha connectat a la xarxa QuiBotH2O.\nContrassenya: 12345678.\n\nUna vegada connectat pots iniciar la sessió introduïnt el nom i cognom, i seleccionant el robot que es desitja controlar.</string>
    <string name="txtTitleHelpLoginAdmin">Inici de sessió (Administrador)</string>
    <string name="txtHelpLoginAdmin">Assegura\'t que el dispositiu mòbil té la connectivitat WiFi activada i s\'ha connectat a la xarxa QuiBotH2O.\nContrassenya: 12345678.\n\nUna vegada connectat pots iniciar sessió introduïnt l\'usuari i contrassenya que es pot trobar en el manual de l\'App Qui-Bot H2O. Després selecciona el robot que es desitgis controlar.\nMolt important: només pot haver-hi un sol administrador amb la sessió iniciada.</string>
    <string name="txtTitleHome">Benvingut a l\'aplicació</string>
    <string name="txtAdmin">Administrador</string>
</resources>