<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeAdmin"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/experiments"
            android:icon="@drawable/icon_experiments"
            android:title="@string/menu_experiments" />
        <item
            android:id="@+id/interactWithRobot"
            android:icon="@drawable/icon_interact"
            android:title="@string/menu_interact" />
        <item
            android:id="@+id/customProgram"
            android:icon="@drawable/icon_custom_program"
            android:title="@string/menu_custom_program" />
        <item
            android:id="@+id/usersList"
            android:icon="@drawable/icon_user"
            android:title="@string/menu_users_list" />
    </group>
</menu>