<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@id/homeUser">
    <fragment
        android:id="@+id/homeUser"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.homeUser.HomeUser"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_user" />
    <fragment
        android:id="@+id/interactWithRobot"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.interactWithRobot.InteractWithRobot"
        android:label="@string/menu_interact"
        tools:layout="@layout/fragment_interact_with_robot" />
    <fragment
        android:id="@+id/experiments"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.experiments.ExperimentsList"
        android:label="@string/menu_experiments"
        tools:layout="@layout/fragment_experiments" />
    <fragment
        android:id="@+id/ticTacToe"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.ticTacToe.TicTacToe"
        android:label="@string/menu_tic_tac_toe"
        tools:layout="@layout/fragment_tic_tac_toe" />
    <fragment
        android:id="@+id/connect4"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.connect4.Connect4"
        android:label="@string/menu_connect4"
        tools:layout="@layout/fragment_connect4" />
</navigation>