<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@id/homeUser">
    <fragment
        android:id="@+id/homeUser"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.homeUser.robot1d.HomeUserRobot1d"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_user_robot1d" />
    <fragment
        android:id="@+id/experiments"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.experiments.Experiments"
        android:label="@string/menu_experiments"
        tools:layout="@layout/fragment_experiments" />
    <fragment
        android:id="@+id/interactWithRobot"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.interactWithRobot.InteractWithRobot"
        android:label="@string/menu_interact"
        tools:layout="@layout/fragment_interact_with_robot" />
    <fragment
        android:id="@+id/customProgram"
        android:name="edu.upc.arnaubeltra.tfgquibot.ui.customProgram.CustomProgram"
        android:label="@string/menu_custom_program"
        tools:layout="@layout/fragment_custom_program" />
</navigation>